--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "crypto": "^1.0.1",
     "crypto-js": "^3.1.9-1",
     "express": "^4.17.1",
+    "node-fetch": "^2.6.0",
     "redis": "^2.8.0"
   }
 }
