--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.0",
+    "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
     "crypto": "^1.0.1",
     "crypto-js": "^3.1.9-1",
